# Turbin3-WBA-Cohort_Q3_2024

./: .gitignore  README.md
amm/: Anchor.toml  README.md
anchor-vault/: Anchor.toml  README.md
anchor-vault-q3/: Anchor.toml  README.md
anchor-vault-q3/tests/: anchor-vault-q3.ts
anchor-vault/tests/: anchor-vault.ts
dice-game/: Anchor.toml  README.md
dice-game/tests/: dice-game.ts
escrow/: Anchor.toml  README.md  package.json  tsconfig.json
escrow/tests/: escrow.ts
nft-staking/: Anchor.toml  README.md  package.json
nft-staking/tests/: nft-staking.ts
price-betting/: .gitignore  Anchor.toml  README.md  package.json  tsconfig.json
price-betting/docs/: user-stories.md
price-betting/programs/price-betting/: Cargo.toml
price-betting/programs/price-betting/scripts/: accept-bet.ts  cancel-bet.ts  claim-treasury.ts  create-bet.ts
price-betting/programs/price-betting/scripts/programs/: price_betting.ts
price-betting/programs/price-betting/src/: error.rs  lib.rs
price-betting/programs/price-betting/src/instructions/: accept.rs  cancel.rs  claim.rs  create.rs  init.rs  mod.rs  resolve.rs  withdraw.rs
price-betting/programs/price-betting/src/state/: bet.rs  mod.rs  program.rs
price-betting/scripts/: 00-init-program.ts  01-create-bet.ts  02-accept-bet.ts  03-cancel-bet.ts  04-resolve-bet.ts  05-claim-bet.ts  06-claim-treasury.ts  99-config.ts  accept-bet.ts  cancel-bet.ts  claim-bet.ts  claim-treasury.ts  create-bet.ts  init-program.ts  resolve-bet.ts
rust-pre-req/src/: lib.rs
solana-starter-ts/: README.md
vote-program/: Anchor.toml  README.md
(+37 files in other folders)
